# std2

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  verbs.txt
src/: lib.rs
src/macros/: mod.rs
